# MTCCmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _CMakeLists.txt
Base/CMakeModules/: Module1.cmake
Base/Targets/SubTarget1/: CMakeLists.txt
Base/Targets/SubTarget2/: CMakeLists.txt
Base/Targets/SubTarget2/AutoConfig/: DummyConfig.h
Base/Targets/SubTarget3/: CMakeLists.txt
Base/TestProject/Core/src/: Module1_CallbackApi.c  Module3_CallbackApi.c  main.c
Base/TestProject/Module1/include/: Module1_CallbackApi.h
Base/TestProject/Module2/include/: Module2_Api.h  Module2_CallbackApi.h
Base/TestProject/Module2/src/: Module2_Api.c
Base/TestProject/Module3/include/: Module3_Api.h
CMakeModules/: Core.cmake  Module2.cmake  Module3.cmake
Scripts/: ProjectGenerator.pl
Targets/SubTarget1/AutoConfig/: DummyConfig.h
Targets/SubTarget3/AutoConfig/: DummyConfig.h
TestProject/AutoConfig/: DummyConfig.h
TestProject/Core/src/: Module1_CallbackApi.c  Module2_CallbackApi.c  Module3_CallbackApi.c  main.c
TestProject/Module1/include/: Module1_Api.h
TestProject/Module1/src/: Module1_Api.c
TestProject/Module2/src/: Module2_Api.c
TestProject/Module3/include/: Module3_CallbackApi.h
TestProject/Module3/src/: Module3_Api.c
